--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue-chartjs": "^5.3.0",
     "vue-json-excel3": "^1.0.30",
     "vue-router": "^4.3.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
